--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,19 @@ main {
 
 h1 {
   font-size: 3.6rem;
+  margin-bottom: 3rem;
+}
+
+.error {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translateX(-50%);
 }
 
 input {
   width: 13rem;
   padding: 0.5rem;
-  color: white;
   cursor: pointer;
   transition: 0.5s;
   font-size: 0.8rem;
